# PRIME

./: .gitignore  LICENSE  README.md  REWRITE_NOTES.md  environment-gpu.yml  environment.yml  pyproject.toml
.github/workflows/: mirror-to-wanlab.yml
prime/: __init__.py  core.py  spatial.py
prime/gpu/: __init__.py  _backend.py  _knn.py  ensemble.py
prime/metrics/: __init__.py  isolated_label.py  xlc.py
prime/plotting/: __init__.py  benchmark.py
prime/pp/: __init__.py  streaming.py
tests/: test_spatial_rewrite.py
