[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prime-sc"
version = "0.2.0"
description = "PRIME: Projection-based Robust Integration via Manifold Embedding — batch effect correction for scRNA-seq and spatial transcriptomics"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Xinchao Wu" },
]
keywords = [
    "single-cell",
    "scRNA-seq",
    "spatial-transcriptomics",
    "batch-effect-correction",
    "data-integration",
    "MNN",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "anndata>=0.8",
    "scanpy>=1.9",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.5",
    "plottable>=0.1.5",
]
metrics = [
    "joblib>=1.1",
]
# GPU backends — install one of these alongside a cupy build that matches
# your CUDA version (cupy-cuda12x, cupy-cuda11x, etc.). cupy is not pinned
# here because the right wheel is CUDA-version specific.
gpu-cuvs = [
    "cuvs-cu12>=24.10",
]
gpu-faiss = [
    "faiss-gpu>=1.7",
]
all = [
    "matplotlib>=3.5",
    "plottable>=0.1.5",
    "joblib>=1.1",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/XinchaoWu99/PRIME"
Repository = "https://github.com/XinchaoWu99/PRIME"
Issues = "https://github.com/XinchaoWu99/PRIME/issues"

[tool.setuptools.packages.find]
include = ["prime*"]
exclude = ["examples*", "tests*"]
